# kuroshiro.rs

./: Cargo.toml  README.md
src/: bin.rs  lib.rs  main.rs
