[package]
name = "kuroshiro"
version = "0.1.0"
authors = ["Sach97 <sacha.arbonel@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kuromoji = { git = "https://github.com/fulmicoton/kuromoji-rs" }
unicase = "2.5.1"
